[gd_scene load_steps=8 format=3 uid="uid://1v88adfuxrea"]

[ext_resource type="Script" path="res://Control.gd" id="1_lscsb"]
[ext_resource type="Texture2D" uid="uid://bikbavq7tq33f" path="res://Art/Tilemaps/tilemap_packed.png" id="2_ko85v"]
[ext_resource type="Texture2D" uid="uid://ijkn4qdj736f" path="res://Art/clawdius.png" id="3_irmji"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5x6pi"]
texture = ExtResource("2_ko85v")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSet" id="TileSet_el5hh"]
sources/0 = SubResource("TileSetAtlasSource_5x6pi")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dicai"]

[sub_resource type="CanvasTexture" id="CanvasTexture_xbakv"]
specular_color = Color(0.768627, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lscsb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 76

[node name="TileMap" type="TileMap" parent="MarginContainer/HBoxContainer/VBoxContainer"]
tile_set = SubResource("TileSet_el5hh")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 65536, 0, 0, 0, 0, 65536, 65536, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 131072, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 65536, 0, 851969, 0, 0, 917505, 65536, 0, 983041, 0, 0, 1048577, 0, 0, 1114113, 65536, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 65536, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 131072, 0, 720898, 0, 0, 786434, 0, 0, 851970, 0, 0, 917506, 0, 0, 983042, 0, 0, 1048578, 0, 0, 1114114, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 65536, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 65536, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 1048579, 0, 0, 1114115, 0, 0, -65532, 0, 0, 4, 131072, 0, 65540, 0, 0, 131076, 131072, 0, 196612, 131072, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 131072, 0, 786436, 0, 0, 851972, 0, 0, 917508, 0, 0, 983044, 65536, 0, 1048580, 0, 0, 1114116, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 65536, 0, 131077, 0, 0, 196613, 0, 0, 262149, 65536, 0, 327685, 0, 0, 393221, 0, 0, 458757, 131072, 0, 524293, 0, 0, 589829, 65536, 0, 655365, 65536, 0, 720901, 65536, 0, 786437, 0, 0, 851973, 0, 0, 917509, 0, 0, 983045, 0, 0, 1048581, 0, 0, 1114117, 131072, 0, -65530, 0, 0, 6, 65536, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 65536, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 65536, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 983046, 0, 0, 1048582, 131072, 0, 1114118, 131072, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 917511, 0, 0, 983047, 0, 0, 1048583, 0, 0, 1114119, 131072, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 131072, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 131072, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 983048, 0, 0, 1048584, 0, 0, 1114120, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 131072, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 786441, 0, 0, 851977, 0, 0, 917513, 0, 0, 983049, 65536, 0, 1048585, 0, 0, 1114121, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 65536, 0, 131082, 0, 0, 196618, 65536, 0, 262154, 0, 0, 327690, 0, 0, 393226, 131072, 0, 458762, 0, 0, 524298, 0, 0, 589834, 131072, 0, 655370, 0, 0, 720906, 0, 0, 786442, 131072, 0, 851978, 0, 0, 917514, 131072, 0, 983050, 0, 0, 1048586, 0, 0, 1114122, 0, 0, -65525, 65536, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 131072, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 65536, 0, 720907, 0, 0, 786443, 0, 0, 851979, 0, 0, 917515, 0, 0, 983051, 0, 0, 1048587, 0, 0, 1114123, 0, 0, -65524, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 131072, 0, 589836, 0, 0, 655372, 131072, 0, 720908, 131072, 0, 786444, 0, 0, 851980, 65536, 0, 917516, 0, 0, 983052, 0, 0, 1048588, 0, 0, 1114124, 65536, 0, -65523, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 65536, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 65536, 0, 655373, 0, 0, 720909, 131072, 0, 786445, 0, 0, 851981, 131072, 0, 917517, 131072, 0, 983053, 65536, 0, 1048589, 0, 0, 1114125, 65536, 0, -65522, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 131072, 0, 196622, 131072, 0, 262158, 131072, 0, 327694, 0, 0, 393230, 131072, 0, 458766, 131072, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 786446, 65536, 0, 851982, 0, 0, 917518, 131072, 0, 983054, 0, 0, 1048590, 0, 0, 1114126, 0, 0, -65521, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 65536, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 983055, 0, 0, 1048591, 0, 0, 1114127, 0, 0, -65520, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 131072, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 786448, 0, 0, 851984, 0, 0, 917520, 0, 0, 983056, 0, 0, 1048592, 0, 0, 1114128, 131072, 0, -65519, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, 720913, 0, 0, 786449, 0, 0, 851985, 131072, 0, 917521, 0, 0, 983057, 0, 0, 1048593, 0, 0, 1114129, 0, 0, -65518, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 131072, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 65536, 0, 589842, 0, 0, 655378, 0, 0, 720914, 0, 0, 786450, 0, 0, 851986, 0, 0, 917522, 0, 0, 983058, 0, 0, 1048594, 0, 0, 1114130, 0, 0, -65517, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 131072, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0, 786451, 0, 0, 851987, 0, 0, 917523, 131072, 0, 983059, 131072, 0, 1048595, 0, 0, 1114131, 0, 0, -65516, 0, 0, 20, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 0, 0, 458772, 0, 0, 524308, 131072, 0, 589844, 0, 0, 655380, 0, 0, 720916, 0, 0, 786452, 0, 0, 851988, 0, 0, 917524, 0, 0, 983060, 0, 0, 1048596, 0, 0, 1114132, 0, 0, -65515, 65536, 0, 21, 0, 0, 65557, 0, 0, 131093, 0, 0, 196629, 0, 0, 262165, 0, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 0, 0, 589845, 0, 0, 655381, 0, 0, 720917, 0, 0, 786453, 0, 0, 851989, 0, 0, 917525, 0, 0, 983061, 0, 0, 1048597, 0, 0, 1114133, 0, 0, -65514, 65536, 0, 22, 65536, 0, 65558, 0, 0, 131094, 0, 0, 196630, 65536, 0, 262166, 0, 0, 327702, 131072, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 0, 0, 720918, 0, 0, 786454, 0, 0, 851990, 0, 0, 917526, 0, 0, 983062, 0, 0, 1048598, 0, 0, 1114134, 0, 0, -65513, 0, 0, 23, 0, 0, 65559, 0, 0, 131095, 0, 0, 196631, 0, 0, 262167, 0, 0, 327703, 0, 0, 393239, 0, 0, 458775, 0, 0, 524311, 0, 0, 589847, 131072, 0, 655383, 0, 0, 720919, 0, 0, 786455, 0, 0, 851991, 0, 0, 917527, 0, 0, 983063, 0, 0, 1048599, 65536, 0, 1114135, 65536, 0, -65512, 0, 0, 24, 0, 0, 65560, 0, 0, 131096, 0, 0, 196632, 0, 0, 262168, 65536, 0, 327704, 0, 0, 393240, 0, 0, 458776, 65536, 0, 524312, 65536, 0, 589848, 0, 0, 655384, 65536, 0, 720920, 0, 0, 786456, 131072, 0, 851992, 0, 0, 917528, 0, 0, 983064, 0, 0, 1048600, 65536, 0, 1114136, 0, 0, -65511, 0, 0, 25, 0, 0, 65561, 65536, 0, 131097, 0, 0, 196633, 131072, 0, 262169, 0, 0, 327705, 0, 0, 393241, 0, 0, 458777, 0, 0, 524313, 0, 0, 589849, 0, 0, 655385, 0, 0, 720921, 0, 0, 786457, 65536, 0, 851993, 0, 0, 917529, 131072, 0, 983065, 0, 0, 1048601, 0, 0, 1114137, 65536, 0, -65510, 0, 0, 26, 0, 0, 65562, 0, 0, 131098, 0, 0, 196634, 0, 0, 262170, 0, 0, 327706, 0, 0, 393242, 0, 0, 458778, 0, 0, 524314, 0, 0, 589850, 0, 0, 655386, 0, 0, 720922, 65536, 0, 786458, 0, 0, 851994, 0, 0, 917530, 0, 0, 983066, 0, 0, 1048602, 0, 0, 1114138, 0, 0, -65509, 0, 0, 27, 0, 0, 65563, 0, 0, 131099, 0, 0, 196635, 0, 0, 262171, 0, 0, 327707, 0, 0, 393243, 0, 0, 458779, 0, 0, 524315, 0, 0, 589851, 0, 0, 655387, 0, 0, 720923, 0, 0, 786459, 65536, 0, 851995, 0, 0, 917531, 0, 0, 983067, 0, 0, 1048603, 0, 0, 1114139, 0, 0, -65508, 0, 0, 28, 0, 0, 65564, 65536, 0, 131100, 0, 0, 196636, 0, 0, 262172, 0, 0, 327708, 0, 0, 393244, 0, 0, 458780, 0, 0, 524316, 0, 0, 589852, 0, 0, 655388, 0, 0, 720924, 65536, 0, 786460, 0, 0, 851996, 0, 0, 917532, 65536, 0, 983068, 131072, 0, 1048604, 0, 0, 1114140, 0, 0, -65507, 0, 0, 29, 0, 0, 65565, 0, 0, 131101, 0, 0, 196637, 0, 0, 262173, 65536, 0, 327709, 0, 0, 393245, 0, 0, 458781, 0, 0, 524317, 0, 0, 589853, 0, 0, 655389, 0, 0, 720925, 0, 0, 786461, 0, 0, 851997, 0, 0, 917533, 65536, 0, 983069, 0, 0, 1048605, 131072, 0, 1114141, 0, 0, -65506, 0, 0, 30, 131072, 0, 65566, 65536, 0, 131102, 131072, 0, 196638, 0, 0, 262174, 0, 0, 327710, 0, 0, 393246, 0, 0, 458782, 0, 0, 524318, 0, 0, 589854, 0, 0, 655390, 0, 0, 720926, 0, 0, 786462, 0, 0, 851998, 0, 0, 917534, 0, 0, 983070, 0, 0, 1048606, 0, 0, 1114142, 0, 0, 786414, 0, 0, 393215, 131072, 0, 524287, 131072, 0, 589823, 131072, 0, 327679, 65536, 0, 655359, 65536, 0, 1179678, 65536, 0)
layer_1/tile_data = PackedInt32Array(851966, 327680, 2, 262144, 327680, 2, 10, 327680, 2, 393227, 327680, 2, 131086, 327680, 2, 393232, 327680, 2, 196634, 327680, 2, 327708, 327680, 2)

[node name="Play" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color(0.647447, 0.120751, 0.209934, 1)
material = SubResource("CanvasItemMaterial_dicai")
use_parent_material = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.309748, 0.408369, 0.883841, 1)
theme_override_colors/font_focus_color = Color(0.972549, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0.843678, 0.0904776, 9.62615e-08, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
text = "𝙋𝙡𝙖𝙮"

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
icon = SubResource("CanvasTexture_xbakv")

[node name="Title" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
layout_mode = 0
offset_left = 136.0
offset_top = -116.0
offset_right = 433.0
offset_bottom = -45.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0.913725, 0, 0, 1)
theme_override_colors/selection_color = Color(0.941176, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.92549, 0, 0, 1)
theme_override_colors/table_border = Color(0.968627, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "𝙍𝙖𝙩 𝙎𝙡𝙖𝙮𝙚𝙧
"

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
layout_mode = 0
offset_left = 116.0
offset_top = -48.0
offset_right = 409.0
offset_bottom = 146.0
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
layout_mode = 0
offset_left = 112.0
offset_top = -45.0
offset_right = 405.0
offset_bottom = 149.0
color = Color(0.945098, 0.192157, 0.192157, 1)

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
layout_mode = 0
offset_left = 116.0
offset_top = -45.0
offset_right = 405.0
offset_bottom = 146.0
color = Color(0.190762, 0.190762, 0.190762, 1)

[node name="Tuto" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
layout_mode = 0
offset_left = 127.0
offset_top = -43.0
offset_right = 389.0
offset_bottom = 148.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "𝖂𝖊𝖑𝖈𝖔𝖒𝖊 𝖙𝖔 𝖗𝖆𝖙 𝖘𝖑𝖆𝖞𝖊𝖗, 𝖍𝖊𝖗𝖊 𝖞𝖔𝖚 𝖜𝖎𝖑𝖑 𝖘𝖊𝖙 𝖔𝖋𝖋 𝖔𝖓 𝖞𝖔𝖚𝖗 𝖏𝖔𝖚𝖗𝖓𝖊𝖞 𝖙𝖔 𝖘𝖑𝖆𝖞 𝖗𝖆𝖙𝖘!

How to play: Clicking on your character brings up all tiles that can be moved to. Selecting a tile moves the character to that location. Each character has two skills. When clicked, these highlight valid targets the skill can be used on.

Each turn can consist of one movement and then one skill per player character before ending your turn. Additional units can be summoned and controlled by you.

"

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(71, 75)
scale = Vector2(0.033854, 0.0309896)
texture = ExtResource("3_irmji")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
